<?xml version="1.0"?>
<package format="3">
  <name>kratos_manav</name>
  <version>0.0.0</version>
  <description>ROS 2 Week 3 Assignment Package</description>
  <maintainer email="xlr8victusmanav@bits.com">Manav Verma</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

